Try latex builds with docker

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: go
 
-sudo: required
+services:
+  - docker
 
 dist: xenial
 
@@ -23,29 +24,27 @@ jobs:
         - curl -LO https://github.com/salmanazarr/distillpub/tarball/${DISTILLPUB_THEME_VERSION} && tar -xzvf ${DISTILLPUB_THEME_VERSION} && mv *distillpub* themes/distillpub
         - curl -LO https://github.com/netlify/netlifyctl/releases/download/v${NETLIFYCTL_VERSION}/netlifyctl-linux-amd64-${NETLIFYCTL_VERSION}.tar.gz && tar -xzvf *.tar.gz && rm *.tar.gz
         - curl -LO https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_${HUGO_VERSION}_Linux-64bit.deb && sudo dpkg -i *.deb && rm *.deb
-        - sudo pip install -r requirements.txt
+        - pip install --user -r requirements.txt
         - hugo version && pygmentize -V && ./netlifyctl version
       script:
+        - git clone https://${GH_ACCESS_TOKEN}@github.com/salmanazarr/resume
+        - docker run --rm -it --entrypoint=sh -v$(pwd):/resume -w /resume jgoldfar/latex-docker:alpine-minplus-latest -c make all
+        - mv resume/dist/*.pdf static/files
         - make public
       after_success:
         - ./netlifyctl deploy -A ${NETLIFY_ACCESS_TOKEN} -m "${TRAVIS_COMMIT_MESSAGE}" -d
     
     - stage: deploy
-      addons:
-        apt:
-          packages:
-            - texlive-latex-base
-            - texlive-latex-extra
-            - texlive-fonts-recommended
-            - texlive-fonts-extra
       before_script:
         - curl -LO https://github.com/salmanazarr/distillpub/tarball/${DISTILLPUB_THEME_VERSION} && tar -xzvf ${DISTILLPUB_THEME_VERSION} && mv *distillpub* themes/distillpub
         - curl -LO https://github.com/netlify/netlifyctl/releases/download/v${NETLIFYCTL_VERSION}/netlifyctl-linux-amd64-${NETLIFYCTL_VERSION}.tar.gz && tar -xzvf *.tar.gz && rm *.tar.gz
         - curl -LO https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_${HUGO_VERSION}_Linux-64bit.deb && sudo dpkg -i *.deb && rm *.deb
-        - sudo pip install -r requirements.txt
-        - pdflatex --version && hugo version && pygmentize -V && ./netlifyctl version
+        - pip install --user -r requirements.txt
+        - hugo version && pygmentize -V && ./netlifyctl version
       script:
-        - git clone https://${GH_ACCESS_TOKEN}@github.com/salmanazarr/resume && cd resume && make all && cd .. && mv resume/dist/*.pdf static/files
+        - git clone https://${GH_ACCESS_TOKEN}@github.com/salmanazarr/resume
+        - docker run --rm -it --entrypoint=sh -v$(pwd):/resume -w /resume jgoldfar/latex-docker:alpine-minplus-latest -c make all
+        - mv resume/dist/*.pdf static/files
         - make public
       after_success:
         - ./netlifyctl deploy -A ${NETLIFY_ACCESS_TOKEN} -m "${TRAVIS_COMMIT_MESSAGE}"
