--- a/config.toml
+++ b/config.toml
@@ -17,7 +17,7 @@ paginate = 7
   color = "#0f2e3d"
 
   [[params.social]]
-  class = "fab fa-google"
+  class = "fas fa-user-graduate"
   url = "https://scholar.google.com/citations?user=p0NMtgsAAAAJ"
 
   [[params.social]]
