Add path to root

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseUrl = "https://www.sanyamkapoor.com"
+baseUrl = "https://www.sanyamkapoor.com/"
 title = "Sanyam Kapoor"
 author = "Sanyam Kapoor"
 canonifyurls = true
