--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Sanyam Kapoor <1sanymakpoor@gmail.com>",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-brands-svg-icons": "^5.13.0",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/react-fontawesome": "^0.1.9",
     "@mdx-js/mdx": "^1.5.8",
