Add offline, metadata, upgrade draft

--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "citation-js": "^0.5.0-alpha.5",
     "deepmerge": "^4.2.2",
     "gatsby": "^2.20.12",
+    "gatsby-plugin-manifest": "^2.3.6",
     "gatsby-plugin-mdx": "^1.1.6",
+    "gatsby-plugin-offline": "^3.1.4",
     "gatsby-plugin-react-helmet": "^3.2.1",
     "gatsby-plugin-theme-ui": "^0.3.0",
     "gatsby-remark-autolink-headers": "^2.2.1",
