--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
   ],
   "license": "MIT",
   "scripts": {
-    "build": "gatsby build && cp _redirects public/",
+    "build": "gatsby build",
     "dev": "gatsby develop",
     "debug": "node --nolazy --inspect-brk node_modules/gatsby/dist/bin/gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
