--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kb",
+  "name": "sanyamkapoor.com",
   "private": true,
   "version": "0.0.1",
   "author": "Sanyam Kapoor <1sanymakpoor@gmail.com>",
