--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@fortawesome/react-fontawesome": "^0.1.9",
     "@mdx-js/mdx": "^1.6.5",
     "@mdx-js/react": "^1.6.5",
-    "@theme-ui/presets": "^0.3.0",
+    "@theme-ui/preset-tailwind": "^0.3.0",
     "@theme-ui/prism": "^0.3.0",
     "citation-js": "^0.5.0-alpha.5",
     "deepmerge": "^4.2.2",
