--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "citation-js": "^0.5.0-alpha.5",
     "deepmerge": "^4.2.2",
     "gatsby": "^2.22.15",
+    "gatsby-plugin-goatcounter": "^0.3.1",
     "gatsby-plugin-manifest": "^2.4.0",
     "gatsby-plugin-mdx": "^1.2.0",
     "gatsby-plugin-offline": "^3.2.0",
