--- a/package.json
+++ b/package.json
@@ -29,11 +29,14 @@
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-helmet": "^6.0.0",
+    "react-vega": "^7.3.0",
     "rebass": "^4.0.7",
     "remark-emoji": "^2.1.0",
     "remark-html-katex": "^2.0.1",
     "remark-math": "^2.0.1",
-    "theme-ui": "^0.3.1"
+    "theme-ui": "^0.3.1",
+    "vega": "^5.13.0",
+    "vega-lite": "^4.13.1"
   },
   "devDependencies": {
     "prettier": "^1.19.1"
