Simplify dependencies, use katex remark plugin instead

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@theme-ui/prism": "^0.3.0",
     "citation-js": "^0.5.0-alpha.5",
     "deepmerge": "^4.2.2",
-    "gatsby": "^2.22.15",
+    "gatsby": "^2.23.0",
     "gatsby-plugin-goatcounter": "^0.3.1",
     "gatsby-plugin-manifest": "^2.4.0",
     "gatsby-plugin-mdx": "^1.2.0",
@@ -22,7 +22,9 @@
     "gatsby-plugin-react-helmet": "^3.3.0",
     "gatsby-plugin-theme-ui": "^0.3.0",
     "gatsby-remark-autolink-headers": "^2.3.0",
+    "gatsby-remark-katex": "^3.3.4",
     "gatsby-source-filesystem": "^2.3.0",
+    "gatsby-transformer-remark": "^2.8.15",
     "katex": "^0.11.1",
     "prismjs": "^1.20.0",
     "prop-types": "^15.7.2",
@@ -30,10 +32,6 @@
     "react-dom": "^16.13.0",
     "react-helmet": "^6.0.0",
     "react-vega": "^7.3.0",
-    "rebass": "^4.0.7",
-    "remark-emoji": "^2.1.0",
-    "remark-html-katex": "^2.0.1",
-    "remark-math": "^2.0.1",
     "theme-ui": "^0.3.1",
     "vega": "^5.13.0",
     "vega-lite": "^4.13.1"
