--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "citation-js": "^0.5.0-alpha.5",
     "deepmerge": "^4.2.2",
     "gatsby": "^2.23.0",
+    "gatsby-plugin-feed": "^2.5.5",
     "gatsby-plugin-goatcounter": "^0.3.1",
     "gatsby-plugin-manifest": "^2.4.0",
     "gatsby-plugin-mdx": "^1.2.0",
@@ -48,7 +49,6 @@
     "dev": "gatsby develop",
     "debug": "node --nolazy --inspect-brk node_modules/gatsby/dist/bin/gatsby develop",
     "fmt": "prettier --write \"**/*.{js,jsx,json,md}\"",
-    "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean"
   }
