--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gatsby": "^2.23.0",
     "gatsby-plugin-feed": "^2.5.5",
     "gatsby-plugin-goatcounter": "^0.3.1",
+    "gatsby-plugin-local-search": "^1.1.1",
     "gatsby-plugin-manifest": "^2.4.0",
     "gatsby-plugin-mdx": "^1.2.0",
     "gatsby-plugin-offline": "^3.2.0",
@@ -32,6 +33,7 @@
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-helmet": "^6.0.0",
+    "react-use-flexsearch": "^0.1.1",
     "react-vega": "^7.3.0",
     "theme-ui": "^0.3.1",
     "vega": "^5.13.0",
