--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gatsby-plugin-local-search": "^1.1.1",
     "gatsby-plugin-manifest": "^2.4.0",
     "gatsby-plugin-mdx": "^1.2.0",
+    "gatsby-plugin-netlify": "^2.3.10",
     "gatsby-plugin-offline": "^3.2.0",
     "gatsby-plugin-react-helmet": "^3.3.0",
     "gatsby-plugin-theme-ui": "^0.3.0",
@@ -27,6 +28,7 @@
     "gatsby-remark-katex": "^3.3.4",
     "gatsby-source-filesystem": "^2.3.0",
     "gatsby-transformer-remark": "^2.8.15",
+    "js-yaml": "^3.14.0",
     "katex": "^0.11.1",
     "prismjs": "^1.20.0",
     "prop-types": "^15.7.2",
