--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gatsby-remark-autolink-headers": "^2.3.0",
     "gatsby-remark-katex": "^3.3.4",
     "gatsby-source-filesystem": "^2.3.0",
+    "gatsby-source-tmdb": "^1.0.2",
     "gatsby-transformer-remark": "^2.8.15",
     "js-yaml": "^3.14.0",
     "katex": "^0.12.0",
