--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sanyamkapoor.com",
+  "name": "im.perhapsbay.es",
   "private": true,
   "version": "0.0.1",
   "author": "Sanyam Kapoor <1sanymakpoor@gmail.com>",
