--- a/package.json
+++ b/package.json
@@ -1,21 +1,20 @@
 {
   "name": "im.perhapsbay.es",
   "private": true,
-  "version": "0.0.1",
+  "version": "1.0.0",
   "author": "Sanyam Kapoor <1sanymakpoor@gmail.com>",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.0",
     "@fortawesome/free-brands-svg-icons": "^5.14.0",
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@fortawesome/react-fontawesome": "^0.1.9",
-    "@jamesdanylik/gatsby-source-goodreads": "^0.1.0",
     "@mdx-js/mdx": "^1.6.5",
     "@mdx-js/react": "^1.6.5",
     "@theme-ui/preset-tailwind": "^0.3.0",
     "@theme-ui/prism": "^0.3.0",
     "citation-js": "^0.5.0-alpha.5",
     "deepmerge": "^4.2.2",
-    "gatsby": "^2.24.0",
+    "gatsby": "^2.28.0",
     "gatsby-plugin-feed": "^2.5.11",
     "gatsby-plugin-goatcounter": "^0.4.0",
     "gatsby-plugin-local-search": "^2.0.0",
@@ -29,6 +28,7 @@
     "gatsby-remark-katex": "^3.3.4",
     "gatsby-source-filesystem": "^2.3.0",
     "gatsby-source-tmdb": "^1.0.2",
+    "gatsby-transformer-csv": "^2.6.0",
     "gatsby-transformer-remark": "^2.8.15",
     "js-yaml": "^3.14.0",
     "katex": "^0.12.0",
