--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "im.perhapsbay.es",
   "private": true,
-  "version": "1.0.0",
-  "author": "Sanyam Kapoor <1sanymakpoor@gmail.com>",
+  "version": "0.0.1",
+  "author": "Sanyam Kapoor",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.0",
     "@fortawesome/free-brands-svg-icons": "^5.14.0",
@@ -19,23 +19,23 @@
     "gatsby-plugin-goatcounter": "^0.4.0",
     "gatsby-plugin-local-search": "^2.0.0",
     "gatsby-plugin-manifest": "^2.4.0",
-    "gatsby-plugin-mdx": "^1.2.0",
+    "gatsby-plugin-mdx": "^1.6.0",
     "gatsby-plugin-netlify": "^2.3.10",
     "gatsby-plugin-offline": "^3.2.0",
     "gatsby-plugin-react-helmet": "^3.3.0",
     "gatsby-plugin-theme-ui": "^0.3.0",
     "gatsby-remark-autolink-headers": "^2.3.0",
-    "gatsby-remark-katex": "^3.3.4",
+    "gatsby-remark-katex": "^3.6.0",
     "gatsby-source-filesystem": "^2.3.0",
     "gatsby-source-tmdb": "^1.0.2",
     "gatsby-transformer-csv": "^2.6.0",
-    "gatsby-transformer-remark": "^2.8.15",
+    "gatsby-transformer-remark": "^2.12.0",
     "js-yaml": "^3.14.0",
     "katex": "^0.12.0",
     "prismjs": "^1.20.0",
     "prop-types": "^15.7.2",
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-helmet": "^6.0.0",
     "react-use-flexsearch": "^0.1.1",
     "react-vega": "^7.4.0",
