--- a/netlify.toml
+++ b/netlify.toml
@@ -3,5 +3,7 @@
   command = "yarn build"
 
 [build.environment]
-  NODE_VERSION = "14"
-  YARN_VERSION = "1.22.4"
+  NODE_VERSION = "15"
+  RUBY_VERSION = "2.7.1"
+  YARN_VERSION = "1.22.10"
+  GATSBY_GC_CODE = "perhapsbayes"
